Opened 2 years ago
Closed 5 months ago
#18088 closed bug (fixed)
media_addon_server crashes in BMessage::FindData
Reported by: | win8linux | Owned by: | nobody |
---|---|---|---|
Priority: | high | Milestone: | R1/beta6 |
Component: | Kits/Application Kit | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Upon startup, media_addon_server immediately crashes. This results in no audio output whatsoever. This occurs even after attempting to start it again manually or killing media_server, which restarts it and media_addon_server.
Attachments (3)
Change History (10)
by , 2 years ago
by , 2 years ago
Attachment: | media_addon_server-1048-debug-20-11-2022-08-20-48.report added |
---|
Crash report
comment:1 by , 2 years ago
Audio hardware details
Device name: Family 17h (Models 00h-0fh) HD Audio Controller Manufacturer: Advanced Micro Devices, Inc. [AMD]
device/type 0x4 device/subtype 0x3 device/interface 0 device/vendor 0x1022 device/id 0x1457
comment:2 by , 2 years ago
Keywords: | media media_addon_server audio removed |
---|---|
Platform: | x86-64 → All |
comment:3 by , 2 years ago
When using the "message" command in Terminal, I get:
failed to unflatten message: Invalid Argument
So, is something left in a corrupt state when this happens, and media_addon_server tries to use the mixer anyway?
comment:4 by , 2 years ago
Summary: | No audio due to media_addon_server immediately crashing → media_addon_server crashes in BMessage::FindData |
---|
comment:5 by , 5 months ago
Also occurred on my system under beta5; the fix for me was to remove media_addon_server's settings file.
comment:6 by , 5 months ago
The next time this happens, please upload the file here rather than deleting it.
Interestingly the MixerSettings logic does check that the message unflattened correctly, and bails out of it didn't. I wonder what went wrong in BMessage here then. The attached corrupt message doesn't seem to cause crashes when used with the "message" command in various ways for me.
comment:7 by , 5 months ago
Component: | Servers/media_addon_server → Kits/Application Kit |
---|---|
Milestone: | Unscheduled → R1/beta6 |
Resolution: | → fixed |
Status: | new → closed |
I managed to reproduce the problem with the "message" command and the debug heap. Fixed in hrev58196.
syslog