BMessage: Clean up properly when reading the stream fails.

Otherwise we leave things in an inconsistent state and could
wind up crashing later.

Fixes #18088.